# ParGA

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  GAGlobe.m  Globe.asv  Globe.m  LICENSE  Makefile  Member.asv  Member.m  Population.asv  Population.m  README.md  cubeSatFitnessFunction.asv  fitnessFunction.m  pyproject.toml  ruff.toml  runGA.asv  runGA.m  rustfmt.toml  sample_fn.m
.github/workflows/: ci.yml
Paper/: ParGA.doc  ParGa.aux  ParGa.tex
benches/: benchmarks.rs
examples/: EXAMPLES.md  alloy_composition_optimization.py  basic_ga.rs  island_model.rs  lennard_jones_clusters.py  optimize_rastrigin.py  optimize_sphere.py  protein_hp_folding.py  rocket_motor_optimization.py
legacy/: GAGlobe.m  Member.m  Population.m  cubeSatFitnessFunction.m
python/parga/: __init__.py  ga.py  parallel.py  viz.py
python/tests/: test_benchmark_comparison.py  test_benchmark_expensive.py  test_parga.py
src/: error.rs  fitness.rs  genome.rs  island.rs  lib.rs  population.rs  rng.rs
src/operators/: crossover.rs  mod.rs  mutation.rs  selection.rs
src/python/: mod.rs
tests/: integration_tests.rs
