[package]
name = "parga"
version = "0.1.0"
edition = "2021"
authors = ["ParGA Contributors"]
description = "High-performance parallel genetic algorithm library with Python bindings"
license = "MIT"
repository = "https://github.com/wdm0006/ParGA"
keywords = ["genetic-algorithm", "optimization", "evolutionary", "parallel", "island-model"]
categories = ["algorithms", "science", "simulation"]
readme = "README.md"
rust-version = "1.75"

[lib]
name = "parga"
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel"]
parallel = ["rayon"]
python = ["pyo3", "numpy"]

[dependencies]
# Core
rand = "0.8"
rand_distr = "0.4"
bitvec = "1.0"
thiserror = "2.0"
derive_builder = "0.20"

# Parallelism
rayon = { version = "1.10", optional = true }

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
proptest = "1.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.bench]
lto = "thin"
codegen-units = 1
